calibrator improvements
Do not restrict calibrators to numeric values as per XTCE. Instead allow calibrating any raw value type to any engineering value type.